--- a/index.html
+++ b/index.html
@@ -180,12 +180,23 @@
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
 
+                                    <h5 class="card-title text-blue-custom">RESULTADOS</h5>
 
                                     <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-etapa-2-la-califa/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO LARGA</a>
 
                                     <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-cxm-mini-la-califita/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO CORTA</a>
 
                                     <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS VIERNES NOCTURNA</a>
+
+                                </div>
+                            </div>
+
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+
+                                    <h5 class="card-title text-blue-custom">DOCUMENTOS</h5>
+                                    
+                                    ="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS VIERNES NOCTURNA</a>
 
                                     <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
