--- a/index.html
+++ b/index.html
@@ -179,12 +179,23 @@
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">HORAS SALIDA DOMINGO</h5>
+                                    <a href="2025/horario-domingo.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HORARIOS DOMINGO</a>
+                                </div>
+                            </div>
+
+
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
 
                                     <h5 class="card-title text-blue-custom">RESULTADOS</h5>
+                                    <a href="2025/resultados-3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS PROVISIONAL 3-ETAPAS</a>
+                                    <a href="2025/resultados-3etapas-base.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS PROVISIONAL 3-ETAPAS BASE</a>
+                                    <a href="2025/resultados-3etapas-relevos.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS PROVISIONAL 3-ETAPAS RELEVOS</a>
 
-                                    <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-etapa-2-la-califa/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO LARGA</a>
-
-                                    <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-cxm-mini-la-califita/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO CORTA</a>
+                                    <a href="2025/resultados-larga.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO LARGA</a>
+                                    <a href="2025/resultados-corta.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO CORTA</a>
+                                    <a href="2025/resultados-cadeba.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CADEBA</a>
 
                                     <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS VIERNES NOCTURNA</a>
 
@@ -195,7 +206,7 @@
                                 <div class="card-body">
 
                                     <h5 class="card-title text-blue-custom">DOCUMENTOS</h5>
-                                    
+
                                     <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                     <a href="guia-cadeba" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
