--- a/index.html
+++ b/index.html
@@ -189,9 +189,12 @@
                                 <div class="card-body">
 
                                     <h5 class="card-title text-blue-custom">RESULTADOS</h5>
-                                   <a href="2025/resultados-3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS PROVISIONAL 3-ETAPAS</a>
+                                    <a href="2025/resultados-3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS 3-ETAPAS</a>
+
+                                    <a href="2025/resultados-domingo.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS DOMINGO</a>
+
                                     <a href="2025/resultados-sabado.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO</a>
-                                    
+
                                     <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS VIERNES NOCTURNA</a>
 
                                 </div>
