--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">FOTOS</h5>
                                     <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - R.MADUEÑO</a>
+                                    <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                 </div>
                             </div>
 
