--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">FOTOS</h5>
                                     <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - R.MADUEÑO</a>
-                                    <a href="fotos-sabado-2025-aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
+                                    <a href="https://www.facebook.com/media/set/?set=a.1394525305477826&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
                                     <a href="fotos-domingo-2025-garriguet" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                     <a href="fotos-domingo-2025-aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - ARISTARUN</a>
                                 </div>
