--- a/fotos-domingo-2025-aristarun.html
+++ b/fotos-domingo-2025-aristarun.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=https://www.facebook.com/media/set/?vanity=aristarun&set=a.1394569975473359" />
+    <meta http-equiv="refresh" content="0; url=https://www.facebook.com/aristarun/photos_albums" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
