--- a/index.html
+++ b/index.html
@@ -183,8 +183,11 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">FOTOS</h5>
                                     <a href="fotos-viernes-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM VIERNES - A.ALCÁNTARA</a>
+
                                     <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - R.MADUEÑO</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
+
+                                    <a href="fotos-domingo-2025-marin" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.MARIN</a>
                                     <a href="fotos-domingo-2025-garriguet" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - ARISTARUN</a>
                                 </div>
