--- a/index.html
+++ b/index.html
@@ -176,17 +176,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-12">
-                        <div class="card margin-bottom-20px red-custom-bg border-none">
-                            
+                        <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos">
 
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
+
+                            <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-viernes">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">FOTOS</h5>
+                                    <h5 class="card-title text-blue-custom" >FOTOS VIERNES</h5>
                                     <a href="fotos-viernes-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM VIERNES - A.ALCÁNTARA</a>
-
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-sabado">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">FOTOS SÁBADO</h5>
                                     <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - R.MADUEÑO</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
-
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-domingo">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">FOTOS DOMINGO</h5>
                                     <a href="fotos-domingo-2025-marin" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.MARIN</a>
                                     <a href="fotos-domingo-2025-garriguet" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - ARISTARUN</a>
@@ -202,7 +210,7 @@
                             </div>
 
 
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                            <div class="card margin-bottom-20px red-custom-bg border-none" id="resultados">
                                 <div class="card-body">
 
                                     <h5 class="card-title text-blue-custom">RESULTADOS</h5>
