--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                                     <h5 class="card-title text-blue-custom">FOTOS SÁBADO</h5>
                                     <a href="fotos-sabado-2025-madu" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - R.MADUEÑO</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
+                                    <a href="fotos-sabado-2025-alcantara-torrearboles" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN TORREÁRBOLES</a>
+                                    <a href="fotos-sabado-2025-alcantara-arrastraculos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN ARRASTRACULOS</a>
+
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-domingo">
