--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
 
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-viernes">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom" >FOTOS VIERNES</h5>
+                                    <h5 class="card-title text-blue-custom">FOTOS VIERNES</h5>
                                     <a href="fotos-viernes-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM VIERNES - A.ALCÁNTARA</a>
+                                    <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-sabado">
@@ -192,7 +193,7 @@
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - ARISTARUN</a>
                                     <a href="fotos-sabado-2025-alcantara-torrearboles" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN TORREÁRBOLES</a>
                                     <a href="fotos-sabado-2025-alcantara-arrastraculos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN ARRASTRACULOS</a>
-
+                                    <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-domingo">
@@ -201,6 +202,7 @@
                                     <a href="fotos-domingo-2025-marin" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.MARIN</a>
                                     <a href="fotos-domingo-2025-garriguet" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - ARISTARUN</a>
+                                    <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
                                 </div>
                             </div>
 
