--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                                     <a href="fotos-sabado-2025-alcantara-torrearboles" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN TORREÁRBOLES</a>
                                     <a href="fotos-sabado-2025-alcantara-arrastraculos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN ARRASTRACULOS</a>
                                     <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
+                                    <a href="fotos-sabado-2025-girona" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SENDERISMO - R.GIRONA</a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-domingo">
