--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
                                     <a href="fotos-domingo-2025-garriguet" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.GARRIGUET</a>
                                     <a href="https://www.facebook.com/aristarun" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - ARISTARUN</a>
                                     <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
+                                    <a href="fotos-domingo-2025-alcantara-mirador" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.ALCÁNTARA - MIRADOR</a>
+                                    <a href="fotos-domingo-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.ALCÁNTARA - OBSTÁCULOS + META + PODIUM</a>
+
                                 </div>
                             </div>
 
