--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@
                                     <h5 class="card-title text-blue-custom">FOTOS VIERNES</h5>
                                     <a href="fotos-viernes-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM VIERNES - A.ALCÁNTARA</a>
                                     <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
+                                    <div class="col-lg-12 col-12">
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Etapa 1 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/qEnioJn7T-E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-sabado">
@@ -246,26 +255,7 @@
                                 </div>
                             </div>
 
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">LISTADO INSCRITOS</h5>
-                                    <a><img class="artists-image" src="2025/listado-inscritos.png" /></a>
-                                </div>
-                                <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
-
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">PROGRAMACIÓN COMPLETA</h5>
-                                    <a href="2025/programacion-completa.png" target="_blank"><img class="artists-image" src="2025/programacion-completa.png" /></a>
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">INFO TÉCNICA</h5>
-                                    <a href="2025/info-tecnica.png" target="_blank"><img class="artists-image" src="2025/info-tecnica.png" /></a>
-                                </div>
-                            </div>
+                            
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
@@ -275,12 +265,7 @@
                                 <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
                             </div>
                         </div>
-                        <div class="card margin-bottom-20px red-custom-bg border-none">
-                            <div class="card-body">
-                                <h5 class="card-title text-blue-custom">INSCRIPCIONES CERRADAS</h5>
-                                <a><img class="artists-image" src="2025/cerradas.png" /></a>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px blue-custom-bg border-none">
