--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll text-yellow-dark-custom" href="inscritos">INSCRITOS</a>
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="encuesta">ENCUESTA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="guia">GUIA</a>
@@ -178,7 +178,13 @@
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos">
 
-
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
+                                    <a href="encuesta" target="_blank"><img class="artists-image" src="2025/encuesta.png" /></a>
+                                </div>
+                                <a href="encuesta" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HACER ENCUESTA</a>
+                            </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-viernes">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">FOTOS VIERNES</h5>
@@ -255,7 +261,7 @@
                                 </div>
                             </div>
 
-                            
+
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
