--- a/impacto.html
+++ b/impacto.html
@@ -84,7 +84,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="inscritos">INSCRITOS</a>
+                            <a class="nav-link click-scroll" href="encuesta">ENCUESTA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="guia">GUIA</a>
