--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
+                                    <h5 class="card-title text-blue-custom">ENCUESTA</h5>
                                     <a href="encuesta" target="_blank"><img class="artists-image" src="2025/encuesta.png" /></a>
                                 </div>
                                 <a href="encuesta" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HACER ENCUESTA</a>
@@ -193,7 +193,14 @@
                                     <div class="col-lg-12 col-12">
                                         <div class="card margin-bottom-20px red-custom-bg">
                                             <div class="card-body">
-                                                <h5 class="card-title text-blue-custom">Resumen Etapa 1 Luis Amores</h5>
+                                                <h5 class="card-title text-blue-custom">Resumen Corto Etapa 1 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/Zgets_dysEI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Completo Etapa 1 Luis Amores</h5>
                                                 <p class="text-white"></p>
                                                 <iframe class="iframe-custom" src="https://www.youtube.com/embed/qEnioJn7T-E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                             </div>
@@ -211,6 +218,22 @@
                                     <a href="fotos-sabado-2025-alcantara-meta" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SÁBADO - A.ALCÁNTARA EN ZONA META Y PODIUMS</a>
                                     <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
                                     <a href="fotos-sabado-2025-girona" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM SENDERISMO - R.GIRONA</a>
+                                    <div class="col-lg-12 col-12">
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Corto Etapa 2 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/lIIP00Kfcn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Completo Etapa 2 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/n7Pxzrc035Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none" id="fotos-domingo">
@@ -222,7 +245,22 @@
                                     <a href="fotos-2025-masatletismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM +ATLETISMO</a>
                                     <a href="fotos-domingo-2025-alcantara-mirador" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.ALCÁNTARA - MIRADOR</a>
                                     <a href="fotos-domingo-2025-alcantara" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ALBUM DOMINGO - A.ALCÁNTARA - OBSTÁCULOS + META + PODIUM</a>
-
+                                    <div class="col-lg-12 col-12">
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Corto Etapa 3 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/fDzERVtd7XE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                        <div class="card margin-bottom-20px red-custom-bg">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-blue-custom">Resumen Completo Etapa 3 Luis Amores</h5>
+                                                <p class="text-white"></p>
+                                                <iframe class="iframe-custom" src="https://www.youtube.com/embed/ccNCw_naYis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
